修复短信验证码功能，移除前端显示验证码

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-dysmsapi==2.1.1
+asgiref==3.8.1
+cffi==1.17.1
+cryptography==44.0.2
 Django==4.0.8
-mysqlclient==2.2.7
 django-crispy-forms==1.14.0
 django-widget-tweaks==1.5.0
+jmespath==0.10.0
+mysqlclient==2.2.7
+pillow==11.1.0
+pycparser==2.22
+python-dotenv==1.1.0
+sqlparse==0.5.3
+tzdata==2025.2
